hashCode override in Block and Transaction